[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemies/enemy_scripts/Enemy_explosive.gd" type="Script" id=1]
[ext_resource path="res://sprites/icon.png" type="Texture" id=2]
[ext_resource path="res://instances/Healthbar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.4859, 15.4126 )

[sub_resource type="CircleShape2D" id=2]
radius = 400.0

[sub_resource type="CircleShape2D" id=3]
radius = 28.7203

[node name="EnemyExplosive" type="KinematicBody2D" groups=[
"enemy",
"enemy_explosive",
]]
collision_layer = 10
collision_mask = 3
script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="DetectionRange" type="Area2D" parent="."]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 2 )

[node name="DamageArea" type="Area2D" parent="."]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
visible = false
shape = SubResource( 3 )

[node name="HealthbarControl" parent="." instance=ExtResource( 3 )]
bar_color = Color( 0.0431373, 0.92549, 0.0784314, 1 )

[connection signal="area_entered" from="DetectionRange" to="." method="_on_DetectionRange_area_entered"]
[connection signal="area_exited" from="DetectionRange" to="." method="_on_DetectionRange_area_exited"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
